--- a/modul2.ipynb
+++ b/modul2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM4R8c71NSUCgw4tuJTOppr",
+      "authorship_tag": "ABX9TyMhF7DFMB1ZvpmYLFib4R94",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,10 +279,10 @@
       "metadata": {
         "id": "zOfquVdALkyV",
         "colab_type": "code",
-        "outputId": "7805c9e3-9dd3-4959-e300-c46c6b837e17",
+        "outputId": "d5a1016e-b4b4-40e1-a995-9347df65aad9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 85
         }
       },
       "source": [
@@ -293,16 +293,19 @@
         "print('Değişkenin içindeki sayı: ', sayi1, 'oldu')\n",
         "sayi1='Murat'\n",
         "print ('Değişkenin içindeki değer: ', sayi1, 'oldu')\n",
+        "sayi1=10.5\n",
+        "print ('Değişkenin içindeki sayı: ', sayi1, 'oldu')\n",
         "#Python'da değişkenin veri tipi ona değer atandığında tanımlandığı için aynı değişkene hem karakter dizisi hem de sayısal değerler atanabiliyor."
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Değişkenin içindeki sayı:  5\n",
             "Değişkenin içindeki sayı:  10 oldu\n",
-            "Değişkenin içindeki değer:  Murat oldu\n"
+            "Değişkenin içindeki değer:  Murat oldu\n",
+            "Değişkenin içindeki sayı:  10.5 oldu\n"
           ],
           "name": "stdout"
         }
@@ -438,7 +441,7 @@
       },
       "source": [
         "**Örnek 10**<br>\n",
-        "Değer atanmayan yani tanımlanmamış bir değişken kullanılırsa  Python hata verir."
+        "Değer atanmayan ve/veya tanımlanmamış bir değişken kullanılırsa  Python hata verir."
       ]
     },
     {
@@ -446,29 +449,61 @@
       "metadata": {
         "id": "jM-KWHNd8Zyj",
         "colab_type": "code",
-        "outputId": "9eb5f80e-e4ea-49d8-91a4-bc86bb010d70",
+        "outputId": "ce8dca8f-8b0f-4e48-d5b0-d95024f38f8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 180
+          "height": 34
         }
       },
       "source": [
-        "print(yenisayi)\n",
-        "#Python değişkenleri değer atandığında tanımlandığı için aşağıdaki hata mesajını alırsınız.\n",
-        "# yenisayi değişkeni tanımlanmamış olduğu için hata mesajı alınır. "
+        "print (yenisayi)\n",
+        "#Python değişkenleri değer atandığında tanımlandığı için hata mesajını alırsınız.\n",
+        "# yenisayi değişkeni tanımlanmamış olduğu için hata mesajı alınır.\n"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-46-ef6cd25d7f93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myenisayi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#Python değişkenleri değer atandığında tanımladığı için aşağıdaki hata mesajını alırsınız\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'yenisayi' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RCavqQgL48GE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Değer atamadan tanımlamak için `yenisayi=int()` kodu kullanılabiir. Bu durmda değişkene ilk değer olarak 0 değeri atanır."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3YebKijV41iD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1468d9da-534a-4584-85dd-b83ba99bcb79"
+      },
+      "source": [
+        "yenisayi=int()\n",
+        "print(yenisayi)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
