--- a/modul2.ipynb
+++ b/modul2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhF7DFMB1ZvpmYLFib4R94",
+      "authorship_tag": "ABX9TyMJcRSIkL5H9VwmlhbCZp5F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,7 +259,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Kod yazarken hep aynı değerler üzerinde işlemler yapmayız. Kullanıcıdan aldığımız değerler üzerinde işlemler yaparız. Örneğin kullanıcıya ismiyle merhaba diyeceğimiz bir programda kullanıcıların isimleri farklı olacaktır. Bu değerleri depolamak amacıyla bellekte belirli bir yer ayrılır. Bir değişken bir isim, sayı veya farklı türdeki bir veri için bellekte ayrılan yeri temsil eder. Bir değişkenin veri türüne bağlı olarak, yorumlayıcı belleği ayırır ve ayrılmış bellekte hangi türde verilerin saklanabileceğine karar verir. Bu nedenle, değişkenlere farklı veri türleri atayarak, bu değişkenlerde tamsayı, ondalık sayı, dizi veya karakter depolayabilirsiniz. Python bu noktada çok esnektir. Aynı değişkeni kullanarak farklı veri tiplerinde değerler atayabilirsiniz. Aynı değişkene önce bir sayı, sonra bir metin dah sonra başka türde bir değer atayabilirsiniz. "
+        "Kod yazarken hep aynı değerler üzerinden değil, kullanıcıdan aldığımız değerler üzerinden de işlemler yaparız. Örneğin kullanıcıya ismiyle merhaba diyeceğimiz bir programda kullanıcıların isimleri farklı olacaktır. Bu değerleri depolamak amacıyla bellekte belirli bir yer ayrılır. Bir değişken bir isim, sayı veya farklı türdeki bir veri için bellekte ayrılan yeri temsil eder. Bir değişkenin veri türüne bağlı olarak, yorumlayıcı belleği ayırır ve ayrılmış bellekte hangi türde verilerin saklanabileceğine karar verir. Bu nedenle, değişkenlere farklı veri türleri atayarak, bu değişkenlerde tamsayı, ondalık sayı, dizi veya karakter depolayabilirsiniz. Python bu noktada çok esnektir. Aynı değişkeni kullanarak farklı veri tiplerinde değerler atayabilirsiniz. Aynı değişkene önce bir sayı, sonra bir metin daha sonra başka türde bir değer atayabilirsiniz. "
       ]
     },
     {
@@ -269,7 +269,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Python’da değişkenlerinin veri tiplerini açıkça  bildirmeye gerek yoktur. Bir değişkene değer atadığınızda bildirim otomatik olarak gerçekleşir. Eşittir işareti (=) değişkenlere değer atamak için kullanılır. = Operatörünün solundaki değişkenin adı ve = operatörünün sağındaki ise bu değişkene atanacak değeri ifade eder.<br>\n",
+        "Python’da değişkenlerinin veri tiplerini açıkça  bildirmeye gerek yoktur. Bir değişkene değer atadığınızda bildirim otomatik olarak gerçekleşir. Eşittir işareti \"=\" değişkenlere değer atamak için kullanılır. \"=\" Operatörünün solundaki değişkenin adı ve = operatörünün sağındaki ise bu değişkene atanacak değeri ifade eder.<br>\n",
         "**Örnek 6**<br>\n",
         "Değişken oluşturma ve değer atamaya ilişkin örnek kodlar."
       ]
@@ -297,7 +297,7 @@
         "print ('Değişkenin içindeki sayı: ', sayi1, 'oldu')\n",
         "#Python'da değişkenin veri tipi ona değer atandığında tanımlandığı için aynı değişkene hem karakter dizisi hem de sayısal değerler atanabiliyor."
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
         "#Python değişkenleri değer atandığında tanımlandığı için hata mesajını alırsınız.\n",
         "# yenisayi değişkeni tanımlanmamış olduğu için hata mesajı alınır.\n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,17 +486,17 @@
       "metadata": {
         "id": "3YebKijV41iD",
         "colab_type": "code",
+        "outputId": "1468d9da-534a-4584-85dd-b83ba99bcb79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1468d9da-534a-4584-85dd-b83ba99bcb79"
+        }
       },
       "source": [
         "yenisayi=int()\n",
         "print(yenisayi)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +531,7 @@
       "source": [
         "sayi1=1\n",
         "metin1='deneme'\n",
-        "print(sayi1+metin1) #Bir sayı ile bir metini, kelimeyi toplamaya çalışıyoruz."
+        "print(sayi1+metin1) #Bir sayı ile bir metni, kelimeyi toplamaya çalışıyoruz."
       ],
       "execution_count": 0,
       "outputs": [
@@ -561,7 +561,70 @@
         "Değişken adında harf, rakam veya _ Büyük veya Küçük harf  olabilir. \n",
         "<br>\n",
         "Değişken adları herhangi bir uzunlukta olabilir.\n",
-        "<br>Python programlama dilinde kullanılan (if, while, do, .....) vb. ifadeler değişken adı olarak kullanılmaz.<br>\n"
+        "<br>Python programlama dilinde reserve sözcükler kullanılamaz. Bu özel sözcüklerin listesini görmek için aşağıdaki kodu kullanabilirsiniz."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UPFgxZATl7Tx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 578
+        },
+        "outputId": "db24c148-47d1-47bc-f209-e351f3a084a2"
+      },
+      "source": [
+        "import keyword\n",
+        "keyword.kwlist"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['False',\n",
+              " 'None',\n",
+              " 'True',\n",
+              " 'and',\n",
+              " 'as',\n",
+              " 'assert',\n",
+              " 'break',\n",
+              " 'class',\n",
+              " 'continue',\n",
+              " 'def',\n",
+              " 'del',\n",
+              " 'elif',\n",
+              " 'else',\n",
+              " 'except',\n",
+              " 'finally',\n",
+              " 'for',\n",
+              " 'from',\n",
+              " 'global',\n",
+              " 'if',\n",
+              " 'import',\n",
+              " 'in',\n",
+              " 'is',\n",
+              " 'lambda',\n",
+              " 'nonlocal',\n",
+              " 'not',\n",
+              " 'or',\n",
+              " 'pass',\n",
+              " 'raise',\n",
+              " 'return',\n",
+              " 'try',\n",
+              " 'while',\n",
+              " 'with',\n",
+              " 'yield']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
       ]
     },
     {
@@ -821,8 +884,7 @@
         "<tr><td>Veri Tipi\t</td> <td>Kısaltma</td><td>Değer Aralığı</td><td>Açıklama</td>\n",
         "</tr>\n",
         "<tr><td>Integer</td><td>int</td><td>64 bittir<td>Tam sayı veri tipidir. </td></tr>\n",
-        "<tr><td>Long</td><td>long</td><td>32 bittir<td>Uzun tam sayı veri tipidir. </td></tr>\n",
-        "<tr><td>Float\t </td><td>float</td><td>64 bittir<td>İki basamaklı ondalıklı sayı ver tipi</td></tr>\n",
+        "<tr><td>Float\t </td><td>float</td><td>64 bittir<td>ondalıklı sayı veri tipi</td></tr>\n",
         "<tr><td>Complex\t </td><td>complex</td><td>Karmaşık sayı<td>A + Bj şeklinde kullanılır.</td></tr>\n",
         "<tr><td>String\t </td><td>string</td><td>Karakter dizilerini yani metinleri göstermek için kullanılır.<td>Çift tırnak veya tek tırnak içinde gösterilir</td></tr>\n",
         "</tr>\n",
@@ -841,6 +903,11 @@
         "colab_type": "text"
       },
       "source": [
+        "**int, float ve complex Veri Tipleri** <br>\n",
+        "int veri tipi Python'da tam sayıların tutulduğu veri tipidir: 3, 5, 198763 gibi.  En çok kullanılan veri tiplerinden biridir. \n",
+        "<br>float ise ondalıklı sayıların tutulduğu veri tipidir. 0.5, 234678.67\n",
+        "<br>\n",
+        "complex veri tipi ise karmaşık sayıların tutulduğu veri tipleridir. A+Bj tipinde veriler tutulur. 4+5j gibi.<br>\n",
         "**Örnek 16**<br>\n",
         "Pythonda bir değişkene değer atandığında veri tipleri atanan değere göre otomatik olarak belirlenir."
       ]
@@ -850,24 +917,34 @@
       "metadata": {
         "id": "sUlMbhuVfc7l",
         "colab_type": "code",
-        "outputId": "04af0406-ccbc-4990-d23c-123c3595bb5b",
+        "outputId": "7f8a3db9-56af-405d-9d33-f4f232565eee",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 85
         }
       },
       "source": [
         "piSayisi=3.14\n",
+        "#float tipinde bir veri\n",
+        "print ('pi sayısı=', piSayisi)\n",
         "rCm=2\n",
+        "#integer tipinde veri\n",
         "alan=3.14*2**2\n",
-        "print('Yarıçapı 2 olan dairenin alanı ', alan, ' cm 2 dir' )"
+        "print ('Alan=', alan)\n",
+        "#sonuç float tpinde\n",
+        "print('Yarıçapı 2 olan dairenin alanı ', alan, ' cm 2 dir' )\n",
+        "karmasikSayi=4+5j\n",
+        "print('Bir karmaşık sayı=', karmasikSayi+3j)"
       ],
       "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Yarıçapı 2 olan dairenin alanı  12.56  cm 2 dir\n"
+            "pi sayısı= 3.14\n",
+            "Alan= 12.56\n",
+            "Yarıçapı 2 olan dairenin alanı  12.56  cm 2 dir\n",
+            "Bir karmaşık sayı= (4+8j)\n"
           ],
           "name": "stdout"
         }
@@ -891,33 +968,31 @@
       "metadata": {
         "id": "dqTSmwM1hRJV",
         "colab_type": "code",
-        "outputId": "ae86b855-5c1c-4313-d5dc-f806f77cd547",
+        "outputId": "f6b252ec-5fbc-46e9-9dec-e3bba2e88170",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 153
         }
       },
       "source": [
         "sayi1=5\n",
-        "sayi2=2147483648000000000000000000000000000000000000000000000000\n",
-        "sayi3=10.556\n",
+        "sayi2=10.556\n",
         "metin1=\"1\" \n",
         "#metin1 değişkenine tırnak içinde verdiğimiz sayının bir karakter, string olduğuna dikaket edin\n",
-        "sayi4=4+5j\n",
+        "sayi3=4+5j\n",
         "askerlikYaptiMi=True\n",
         "#True doğru, 1, evet anlamındadır.\n",
         "print (\"1. değişkenin veri tipi: \", type(sayi1))\n",
-        "print (\"2. değişkenin veri tipi:\", type(sayi2))\n",
-        "print (\"3. değişkenin veri tipi: \", type(sayi3))\n",
-        "print (\"4. değişkenin veri tipi: \", type(metin1))\n",
-        "print (\"5. değişkenin veri tipi: \", type(sayi4))\n",
-        "print (\"6. değişkenin veri tipi: \", type(askerlikYaptiMi))\n",
+        "print (\"2. değişkenin veri tipi: \", type(sayi2))\n",
+        "print (\"3. değişkenin veri tipi: \", type(metin1))\n",
+        "print (\"4. değişkenin veri tipi: \", type(sayi3))\n",
+        "print (\"5. değişkenin veri tipi: \", type(askerlikYaptiMi))\n",
         "listem=['Mehmet', 24, 'Mühendis', True]\n",
-        "print (\"7. değişkenin veri tipi: \", type(listem))\n",
+        "print (\"6. değişkenin veri tipi: \", type(listem))\n",
         "demet1=('Mehmet', 24, 'Mühendis', True)\n",
-        "print (\"8. değişkenin veri tipi: \", type(demet1))\n",
+        "print (\"7. değişkenin veri tipi: \", type(demet1))\n",
         "sozluk={'adi': 'Mehmet','yasi': 24, 'meslekUnvani':'Mühendis', 'askerlikDurumu': True}\n",
-        "print (\"9. değişkenin veri tipi: \", type(sozluk))"
+        "print (\"8. değişkenin veri tipi: \", type(sozluk))"
       ],
       "execution_count": 0,
       "outputs": [
@@ -925,14 +1000,13 @@
           "output_type": "stream",
           "text": [
             "1. değişkenin veri tipi:  <class 'int'>\n",
-            "2. değişkenin veri tipi: <class 'int'>\n",
-            "3. değişkenin veri tipi:  <class 'float'>\n",
-            "4. değişkenin veri tipi:  <class 'str'>\n",
-            "5. değişkenin veri tipi:  <class 'complex'>\n",
-            "6. değişkenin veri tipi:  <class 'bool'>\n",
-            "7. değişkenin veri tipi:  <class 'list'>\n",
-            "8. değişkenin veri tipi:  <class 'tuple'>\n",
-            "9. değişkenin veri tipi:  <class 'dict'>\n"
+            "2. değişkenin veri tipi:  <class 'float'>\n",
+            "3. değişkenin veri tipi:  <class 'str'>\n",
+            "4. değişkenin veri tipi:  <class 'complex'>\n",
+            "5. değişkenin veri tipi:  <class 'bool'>\n",
+            "6. değişkenin veri tipi:  <class 'list'>\n",
+            "7. değişkenin veri tipi:  <class 'tuple'>\n",
+            "8. değişkenin veri tipi:  <class 'dict'>\n"
           ],
           "name": "stdout"
         }
@@ -946,7 +1020,7 @@
       },
       "source": [
         "**Python string (karakter dizisi)  veri tipi**<br>\n",
-        "Karakter dizisi kullanıcıdan alınan değerleri metin formatında tutulduğu veri tipleridir. Python karakter dizisi oldukça kullanışlı özeliklere sahiptir. <br>**Örnek 18**<br>Bir karakter dizisini ekrana yazdırılabilir. Başka bir karakter dizisiyle birleştirebilirsiniz. len() metodunu kullanarak bir karakter dizisinin uzunluğunu bulabilirsiniz. "
+        "Karakter dizisi kullanıcıdan alınan değerleri metin formatında tutulduğu veri tipleridir. Python karakter dizisi oldukça kullanışlı özeliklere sahiptir. <br>**Örnek 18**<br>Bir karakter dizisini ekrana yazdırılabilir. Başka bir karakter dizisiyle birleştirebilirsiniz. <br>**Not**<br>len() metodunu kullanarak bir karakter dizisinin uzunluğu alınabilir. "
       ]
     },
     {
@@ -1568,6 +1642,41 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Ma14j65OBGCT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Bir sayının kökünü almak için 1/kuvvet olarak kullanılabilir. Örnek olarak karekökünü almak içi 1/2 kuvveti alınır. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EpWXXnbnBIU5",
+        "colab_type": "code",
+        "outputId": "8feab536-0013-492e-a435-60ccc1081196",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(49**(1/2))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Dbag2je4r9u9",
         "colab_type": "text"
       },
@@ -1863,7 +1972,7 @@
       },
       "source": [
         "**Büyüktür (>) Operatörü**<br>\n",
-        "Büyüktür > operatörü sayısal iki değeri karşılaştırmak için kullanılır. 1. sayı 2. sayıdan büyükse True değilse False değerini döndürür.\n",
+        "Büyüktür > operatörü iki değeri karşılaştırmak için kullanılır. 1. sayı 2. sayıdan büyükse True değilse False değerini döndürür.\n",
         "<br>**Örnek 37**<br>"
       ]
     },
@@ -1928,7 +2037,7 @@
       },
       "source": [
         "**Küçüktür (<) Operatörü**<br>\n",
-        "Küçüktür < operatörü sayısal iki değeri karşılaştırmak için kullanılır. 1. sayı 2. sayıdan küçükse True değilse False değerini döndürür. Büyüktür operatörünün tersi işlevini görür.\n",
+        "Küçüktür < operatörü iki değeri karşılaştırmak için kullanılır. 1. sayı 2. sayıdan küçükse True değilse False değerini döndürür. Büyüktür operatörünün tersi işlevini görür.\n",
         "<br>**Örnek 38**<br>"
       ]
     },
@@ -1962,6 +2071,43 @@
             "True\n",
             "False\n",
             "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qHF2EbxREbRp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Metinsel ifadelerde alfabetik sıralamada sonra gelen ifade daha büyük olarak değerlendirilir."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b6MDf3MkCmMo",
+        "colab_type": "code",
+        "outputId": "8fbb7a85-9dcb-4887-c51b-9bc82edb85d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "print ('z'>'a')\n",
+        "print ('a'<'z')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n"
           ],
           "name": "stdout"
         }
