--- a/modul2.ipynb
+++ b/modul2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMJcRSIkL5H9VwmlhbCZp5F",
+      "authorship_tag": "ABX9TyOB1itjx8A6SCG7f/QRv8MX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3053,6 +3053,91 @@
           "text": [
             "True\n",
             "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rj-WF0Ui3maa",
+        "colab_type": "text"
+      },
+      "source": [
+        "7. Veliye öğrencisinin devamsızlığını bildiren mesaj metni yazan kodları yazınız. Veli adını soyadını, mesajın içeriğini, devamsızlık süresini ayrı değişkenlere atayarak mesajda . Sn..... .......öğrencinizin toplam devamsızlığı .... gündür.\n",
+        "Python Lisesi \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x3YrZ6UT5oOU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4ba91457-7f16-4ab2-a40e-1f77ec0a0be3"
+      },
+      "source": [
+        "onMesaj=\"Sayın \"\n",
+        "veliAdi='Murat KARA'\n",
+        "mesajMetni =\" öğrencinizin toplam devamsızlığı : \"\n",
+        "devamsizlik='19.5'\n",
+        "veliMesaj=(onMesaj+veliAdi+mesajMetni+devamsizlik+' gün Python lisesi ')\n",
+        "print(veliMesaj)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sayın Murat KARA öğrencinizin toplam devamsızlığı : 19.5 gün Python lisesi \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tRBDEGkM7VLh",
+        "colab_type": "text"
+      },
+      "source": [
+        "8. Tüketiciye su faturasını bildiren mesaj metni oluşturan kodları yazınız.<br>\n",
+        "Kullanıcıya fatura tutarını belirten mesajda kullanılacak değişkenler: Hitap şekli, abone numarası, tüketim dönemi, tüketim tutarı*1.\n",
+        "<br>\n",
+        "Sayın ...nolu abonemiz .................. dönemi faturanız ...... TL'dir.   Python Belediyesi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xHGkmgqQ3nEH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8f554155-66a5-406f-d29a-d7aedaaf8233"
+      },
+      "source": [
+        "onMesaj=\"Sayın \"\n",
+        "mesajSonu=\" Mayıs 2020 dönemi faturanız : \"\n",
+        "aboneNo=\"29101923\"\n",
+        "tuketim=20\n",
+        "tuketimTutari=int(tuketim)*1.0\n",
+        "mesaj=onMesaj+str(aboneNo)+' nolu abonemiz ' + mesajSonu+str(tuketimTutari)+\" TL' dir. Python Belediyesi\"\n",
+        "print(mesaj)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sayın 29101923 nolu abonemiz  Mayıs 2020 dönemi faturanız : 20.0 TL' dir. Python Belediyesi\n"
           ],
           "name": "stdout"
         }
